JavaScript: Make "this" available in blocks inside arrow functions

Fixes: QTBUG-98039
Change-Id: I51ff36994fa0f3f3568c8114cb6841f677f64bc4
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit eeec9f03e9cf57e8cde311897f7e3e62a217da15)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>